--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rematch/core": "^2.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "3.1.1"
+    "react-redux": "^7.2.6",
+    "react-scripts": "3.1.1",
+    "redux": "^4.1.2",
+    "rematch-core": "^0.6.0",
+    "wc-toast": "^1.2.5"
   },
   "scripts": {
     "start": "react-scripts start",
